.metadata/.plugins/org.eclipse.cdt.ui/NitishAss4B.build.log
22:21:20 **** Incremental Build of configuration Debug for project NitishAss4B ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
..\main.cpp: In function 'void readLine(std::__cxx11::string)':
..\main.cpp:38:14: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     if(space != string::npos)
        ~~~~~~^~~~~~~~~
..\main.cpp:43:27: error: no match for call to '(std::__cxx11::string {aka std::__cxx11::basic_string<char>}) (int&)'
             cout << line(l);
                           ^
..\main.cpp:59:22: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int n = 0; n < line.length(); n++)
                    ~~^~~~~~~~~~~~~~~

22:21:21 Build Finished (took 874ms)

